// Vitest Snapshot v1

exports[`attribute > dynamic 1`] = `
"let %%template0 = @html(\\"<div></div>\\");
let %fragment0 = @clone(%template0);
$: @attr(%child0, \\"class\\", className);
@append(%fragment0, $$root);
"
`;

exports[`attribute > dynamic boolean 1`] = `
"let %%template0 = @html(\\"<textarea></textarea>\\");
let %fragment0 = @clone(%template0);
let %child0 = @traverse(%fragment0, [0]);
$: @toggle(%child0, \\"readonly\\", is_readonly);
@append(%fragment0, $$root);
"
`;

exports[`attribute > static 1`] = `
"let %%template0 = @html(\\"<div class=\\\\\\"foo\\\\\\"></div>\\");
let %fragment0 = @clone(%template0);
@append(%fragment0, $$root);
"
`;

exports[`attribute > static boolean 1`] = `
"let %%template0 = @html(\\"<textarea readonly></textarea>\\");
let %fragment0 = @clone(%template0);
@append(%fragment0, $$root);
"
`;

exports[`attribute > static unquoted 1`] = `
"let %%template0 = @html(\\"<div class=\\\\\\"foo\\\\\\"></div>\\");
let %fragment0 = @clone(%template0);
@append(%fragment0, $$root);
"
`;

exports[`component > v:self on a custom element 1`] = `
"let %%template0 = @html(\\"<x-app><div>hello world!</div></x-app>\\");
let %fragment0 = @clone(%template0);
let %child0 = new $$host.constructor();
let %marker0 = @traverse(%fragment0, [0, 0]);
@replace(%child0, %marker0, true);
@append(%fragment0, $$root);
"
`;

exports[`expression > component 1`] = `
"let %%template0 = @html(\\"<div>hello <!>!</div>\\");
let %fragment0 = @clone(%template0);
let %marker0 = @traverse(%fragment0, [0, 1]);
@text(%marker0, () => name);
let %child0 = new Main();
let %marker1 = @traverse(%fragment0, [0]);
@replace(%child0, %marker1, true);
@append(%fragment0, $$root);
"
`;

exports[`expression > custom element 1`] = `
"let %%template0 = @html(\\"<x-app>hello <!>!</x-app>\\");
let %fragment0 = @clone(%template0);
let %marker0 = @traverse(%fragment0, [0, 1]);
@text(%marker0, () => name);
@append(%fragment0, $$root);
"
`;
